--- a/artemis/dashboard/static/css/main.css
+++ b/artemis/dashboard/static/css/main.css
@@ -183,17 +183,19 @@ iframe {
   width: 90%;
   /*min-height: 100vh;*/
   /*background: #f0fff0;*/
-  max-height: 50%;
+  max-height: 100px;
   align-items: center;
   justify-content: center;
   /*padding: 33px;*/
   margin: 30px;
+
 }
 
 .sysinfo-table {
-    max-height: 70%;
+    max-height: 100px;
     font-size: 7pt;
-    overflow-x:auto;
+    overflow-x:scroll;
+    overflow-y:scroll;
     margin-bottom: 10px;
 }
 
